# databus-client

./: .gitignore  .travis.yml  Dockerfile  README.md  SUMMARY.md  config.yml  pom.xml  run.sh
.github/workflows/: docker-image.yml  maven-java-11.yml  maven-java-8.yml  maven.yml  push_dockerHub_build_latest_code.yml  push_dockerHub_jar_release.yml
docker/: Dockerfile  README.md  run.sh
docker/databus-client/: Dockerfile  entrypoint.sh  example.query
docker/databus-client-compose/: docker-compose.yml
docker/databus-client-jar/: Dockerfile  dockerfile2  entrypoint.sh  test.sparql
docker/virtuoso-compose/: docker-compose.yml  myQuery.sparql
docker/virtuoso-image/: Dockerfile  entrypoint.sh  query.query
docker/virtuoso-image_old/: entrypoint.sh
docs/: SUMMARY.md
docs/concept/: concept.md
docs/examples/: exampleCLI.md  exampleDocker.md  exampleDocker2.md
docs/overview/: README.md  README_old.md  concept.md  currentState.md  databusClient.md  databus_client.md  features.md  newtry.md  readme.md  roadmap.md  supportedFormats.md  vision.md
docs/usage/: README.md  (+11 more)
downloaded_files/: geo-coordinates-mappingbased_lang=be.ttl.bz2
example/: README.md  pom.xml
examples/: download-data-using-collection-uri.md
python/: BACKLOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test.sh
python/databusclient/: BACKLOG.md  __init__.py  __main__.py  cli.py  client.py  databus_client.py  databus_client_lib.py  deploy.py
python/scripts/: redeploy_from_endpoint.py
python/tests/: test_databusclient.py  test_download.py
usage/: docker.md
(+345 files in other folders)
