[tool.poetry]
name = "databusclient"
version = "0.7"
description = "A simple client for submitting data to the databus"
authors = ["DBpedia Association"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
