[tool.poetry]
name = "databusclient"
version = "0.10"
description = "A simple client for submitting data to the DBpedia Databus"
authors = ["DBpedia Association"]
license = "Apache-2.0 License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.6.1"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
